[package]
name = "item-lambda-materialize-dynamodb-new"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
item-core = { workspace = true }
item-dynamodb = { workspace = true, features = ["repository"] }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws_lambda_events = { workspace = true, features = ["sqs"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }

[dev-dependencies]
test-api = { workspace = true, features = ["dynamodb"] }
serial_test = { workspace = true }
rstest = { workspace = true }
url = { workspace = true }
fake = { workspace = true }
time = { workspace = true }
item-core = { workspace = true, features = ["test-data"] }
uuid = { workspace = true }
