[package]
name = "item-lambda-materialize-dynamodb-update"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
item-core = { workspace = true }
item-dynamodb = { workspace = true, features = ["repository"] }
item-lambda-common = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws_lambda_events = { workspace = true, features = ["sqs"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
url = { workspace = true }
serde_dynamo = { workspace = true }
item-core = { workspace = true, features = ["test-data"] }
fake = { workspace = true }
uuid = { workspace = true }
