[package]
name = "item-lambda-materialize-opensearch-new"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
item-core = { workspace = true }
item-opensearch = { workspace = true }
item-dynamodb = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws_lambda_events = { workspace = true, features = ["sqs"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }
dotenvy = { workspace = true }
opensearch = { workspace = true }
url = { workspace = true }
field = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
url = { workspace = true }
item-opensearch = { workspace = true, features = ["test-data"] }
fake = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
