[package]
name = "item-lambda-write-new"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../../../../../src/common" }
item-core = { path = "../../../../src/item-core" }
item-write = { path = "../../../../src/item-write" }
lambda_runtime = "0.14.3"
aws-config = "1.6.2"
aws-sdk-dynamodb = "1.74.0"
aws_lambda_events = "0.17.0"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros"] }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tracing = "0.1.41"
dotenvy = "0.15.7"

[dev-dependencies]
test-api = { path = "../../../../../../src/test-api" }
serial_test = "3.2.0"
rstest = "0.25.0"
mockall = "0.13.1"
