[package]
name = "item-lambda-write-new"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
item-core = { workspace = true }
item-service = { workspace = true, features = ["dynamodb"] }
item-dynamodb = { workspace = true, features = ["repository"] }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws_lambda_events = { workspace = true, features = ["sqs"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
url = { workspace = true }
item-service = { workspace = true, features = ["test-data", "dynamodb"] }
fake = { workspace = true }
uuid = { workspace = true }
