[package]
name = "item-lambda-write-update"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
item-dynamodb = { workspace = true, features = ["repository"] }
item-service = { workspace = true, features = ["dynamodb"] }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws_lambda_events = { workspace = true, features = ["sqs"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
item-service = { workspace = true, features = ["test-data", "dynamodb"] }
fake = { workspace = true }
uuid = { workspace = true }
